--- a/Pikacho/Pikacho/PikachoRelease.entitlements
+++ b/Pikacho/Pikacho/PikachoRelease.entitlements
@@ -2,12 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NFCReaderUsageDescription</key>
-	<string></string>
-	<key>UIAppFonts</key>
+	<key>com.apple.developer.nfc.readersession.formats</key>
 	<array>
-		<string>SF-Pro-Text-Bold.otf</string>
-		<string>SF-Pro-Text-Regular.otf</string>
+		<string>TAG</string>
 	</array>
 </dict>
 </plist>
